--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "basic-auth": "^1.0.0"
+    "basic-auth": "^1.0.0",
+    "body": "^5.1.0"
   },
   "devDependencies": {
     "chai": "^2.2.0",
