--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "contentful-webhook-server",
+  "name": "@trussle/contentful-webhook-server",
   "version": "1.2.0",
   "description": "Server to handle Contentful webhook HTTP requests",
   "keywords": [
