--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "type": "git",
     "url": "http://github.com/jvandemo/contentful-webhook-server.git"
   },
-  "main": "index.js",
+  "main": "index",
   "scripts": {
     "test": "mocha"
   },
